--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
     <section id="home">
         <div class="main">
-            <h1 class="headings">I AM <br>MD KAMIL NASAR</h1>
+            <h1 class="headings">I AM <br> MD KAMIL NASAR <br>SOFTWARE ENGINEER</h1>
             <button class="btn">
                 Miss me
             </button>
@@ -35,7 +35,7 @@
             <!-- <h1 class="headings">ABOUT ME</h1> -->
             <img src="img3.jpg.jpg" alt="">
             <div id="intro">
-                <h2>KAMIL NASAR</h2>
+                <h2> MD KAMIL NASAR</h2>
                 <P>I'm an enthusiastic learner and who is undergrad Engineering student at ZHCET, AMU ,who constantly
                     working to learn new things and improve my skills to be the best version of myself.
                     I am motivated and driven. I thrive on challenges and constantly set goals for myself, so I have
