--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
     <section id="home">
         <div class="main">
-            <h1 class="headings">I AM <br> MD KAMIL NASAR <br>SOFTWARE ENGINEER</h1>
+            <h1 class="headings">I AM <br> MD KAMIL NASAR <br>SOFTWARE DEVELOPER</h1>
             <button class="btn">
                 Miss me
             </button>
@@ -43,7 +43,14 @@
                     opportunity to do better and achieve greatness. I'm a people-person. I love meeting new people and
                     learning about their lives and their backgrounds. I can almost always find common ground with
                     strangers, and I like making people feel comfortable in my presence. I love to take lead and to help
-                    others in all possible ways I can. I'm a fellow creative soul who loves to do something new 🥲.</P>
+                    others in all possible ways I can. I'm a fellow creative soul who loves to do something new 🥲.<br>
+                     who loves writing code. Ever since I wrote my first program in C++
+                    and got to know about concepts like Classes and objects, I have been obsessed with the idea of using
+                    software to solve practical problems. Software engineering is a never-ending puzzle that I am
+                    passionately engaged in solving. Android development and problem-solving call to all my passion, it
+                    incorporates creativity and brain-teasing. My specialties include quickly learning new skills and
+                    programming languages, and problem-solving. I love to take lead and to help others in all possible way i can
+                    </P>
             </div>
         </div>
     </section>
