--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     software to solve practical problems. Software engineering is a never-ending puzzle that I am
                     passionately engaged in solving. Android development and problem-solving call to all my passion, it
                     incorporates creativity and brain-teasing. My specialties include quickly learning new skills and
-                    programming languages, and problem-solving. I love to take lead and to help others in all possible way i can
+                    programming languages, and problem-solving. I love to take lead 
                     </P>
             </div>
         </div>
